Compact single values